<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_bg_row_video_color"
    android:orientation="vertical"
     >

    <RelativeLayout
        android:id="@+id/video_li1"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/vv_topbar_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnHome"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/vv_bg_btn_home"
            android:tag="4" />

        <TextView
            android:id="@+id/vv_tv_title_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/btnHome"
            android:text="@string/video_tool_bar_title"
            android:textColor="@color/c_tool_bar_title_text"
            android:textSize="10sp"
            android:textStyle="bold" />
    </RelativeLayout>
	<ScrollView 
	    android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        
        android:layout_below="@+id/video_li1" >
	    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
	         <RelativeLayout
        android:id="@+id/rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  >

        <com.yahia.libs.CustomViews.ImageFromUrl.UIImage
            android:id="@+id/video_img"
            android:layout_width="match_parent"
            android:layout_height="180dp" 
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher"
            android:tag="2" />

        <Button
            android:id="@+id/btnOpenVideo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/vv_bg_btn_play"
            android:tag="2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/video_li2"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/rela"
        android:background="@drawable/vv_topbar_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnShare"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/vv_bg_btn_share" />

        <Button
            android:id="@+id/btnFavo"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/vv_btn_bg_favo" />

        <Button
            android:id="@+id/btnOpenLink"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_toRightOf="@id/btnShare"
            android:background="@drawable/vv_btn_bg_open_link" />

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:background="@drawable/vv_btn_bg_download" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/adView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/video_li2" 
        android:layout_marginTop="15dp"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adView1"
        android:orientation="vertical"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/line_1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/c_line" />

            <TextView
                android:id="@+id/vv_tv_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_1"
                android:paddingLeft="25dp"
                android:paddingRight="10dp"
                android:text="text .. text .. text .. text .. text .. text .. text .. text ..text .. text .. text .. text .. text .. text .. text .. text .. "
                
                android:textColor="@color/c_vv_detalis_text_1"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/line_2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/vv_tv_title"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/c_line" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_2"
                android:paddingLeft="25dp"
                android:text="@string/str_vv_duration"
                android:textColor="@color/c_vv_detalis_text_2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_2"
                android:layout_toLeftOf="@+id/vv_tv_date"
                android:paddingRight="5dp"
                android:text="@string/str_vv_date"
                android:textColor="@color/c_vv_detalis_text_2" />

            <ImageView
                android:id="@+id/line_3"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textView1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/c_line" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_3"
                android:paddingLeft="25dp"
                android:text="@string/str_vv_rating"
                android:textColor="@color/c_vv_detalis_text_2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_3"
                android:layout_toLeftOf="@+id/vv_tv_views_count"
                android:paddingRight="5dp"
                android:text="@string/str_vv_views"
                android:textColor="@color/c_vv_detalis_text_2" />

            <ImageView
                android:id="@+id/line_4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textView3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/c_line" />

            <TextView
                android:id="@+id/vv_tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_4"
                android:paddingLeft="25dp"
                android:paddingRight="10dp"
                android:textColor="@color/c_vv_detalis_text_2"
                android:text="Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text.....Medium Text....."
                 />

            <TextView
                android:id="@+id/vv_tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_2"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView1"
                android:text="04:25"
                
                android:textColor="@color/c_vv_detalis_text_1" />

            <TextView
                android:id="@+id/vv_tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/line_3"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="28-08-2012"
                android:textColor="@color/c_vv_detalis_text_1" />

            <TextView
                android:id="@+id/vv_tv_views_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/line_4"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="5"
                android:textColor="@color/c_vv_detalis_text_1" />

            <TextView
                android:id="@+id/vv_tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/line_4"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView3"
                android:text="2.03"
                
                android:textColor="@color/c_vv_detalis_text_1" />
        </RelativeLayout>
    </ScrollView>
	    </RelativeLayout>
	</ScrollView>
   

</RelativeLayout>